amplify add auth +  react ui component

--- a/part2/mfe-parent/amplify/backend/backend-config.json
+++ b/part2/mfe-parent/amplify/backend/backend-config.json
@@ -1,1 +1,10 @@
-{}
+{
+  "auth": {
+    "mfeparent71e86a8b": {
+      "service": "Cognito",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [],
+      "customAuth": false
+    }
+  }
+}
