--- a/part2/mfe-payments/angular.json
+++ b/part2/mfe-payments/angular.json
@@ -44,7 +44,7 @@
                 }
               ],
               "optimization": true,
-              "outputHashing": "all",
+              "outputHashing": "none",
               "sourceMap": false,
               "namedChunks": false,
               "extractLicenses": true,
