--- a/part3/mfe-payments/package.json
+++ b/part3/mfe-payments/package.json
@@ -7,19 +7,23 @@
     "build": "ng build --prod --single-bundle",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.7",
+    "@angular/animations": "^11.2.7",
+    "@angular/cdk": "^11.2.9",
     "@angular/common": "~11.2.7",
     "@angular/compiler": "~11.2.7",
     "@angular/core": "~11.2.7",
     "@angular/elements": "^11.2.7",
     "@angular/forms": "~11.2.7",
+    "@angular/material": "^11.2.9",
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "aws-amplify": "^3.3.27",
     "document-register-element": "^1.7.2",
     "ngx-build-plus": "^11.0.0",
     "rxjs": "~6.6.0",
@@ -30,9 +34,11 @@
     "@angular-devkit/build-angular": "~0.1102.6",
     "@angular/cli": "~11.2.6",
     "@angular/compiler-cli": "~11.2.7",
+    "@types/graphql": "^14.5.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "graphql": "^14.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
