--- a/part3/mfe-payments/.graphqlconfig.yml
+++ b/part3/mfe-payments/.graphqlconfig.yml
@@ -10,3 +10,6 @@ projects:
         codeGenTarget: typescript
         generatedFileName: src/PaymentsAPI.ts
         docsFilePath: src/graphql
+extensions:
+  amplify:
+    version: 3
