--- a/part4/mfe-accounts/amplify/backend/backend-config.json
+++ b/part4/mfe-accounts/amplify/backend/backend-config.json
@@ -5,34 +5,7 @@
       "providerPlugin": "awscloudformation"
     }
   },
-  "function": {
-    "accountsRESTLambda": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
-    }
-  },
-  "auth": {
-    "cognitob8649d9d": {
-      "service": "Cognito",
-      "serviceType": "managed",
-      "providerPlugin": "awscloudformation"
-    }
-  },
-  "api": {
-    "accounts": {
-      "service": "API Gateway",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "accountsRESTLambda",
-          "attributes": [
-            "Name",
-            "Arn"
-          ]
-        }
-      ]
-    }
-  }
+  "function": {},
+  "auth": {},
+  "api": {}
 }
