--- a/part4/mfe-accounts/package.json
+++ b/part4/mfe-accounts/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "aws-amplify": "^3.3.27",
     "document-register-element": "^1.7.2",
     "ngx-build-plus": "^11.0.0",
     "rxjs": "~6.6.0",
@@ -30,6 +31,7 @@
     "@angular-devkit/build-angular": "~0.1102.6",
     "@angular/cli": "~11.2.6",
     "@angular/compiler-cli": "~11.2.7",
+    "@types/graphql": "^14.5.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
