--- a/part4/mfe-accounts/amplify/backend/backend-config.json
+++ b/part4/mfe-accounts/amplify/backend/backend-config.json
@@ -19,7 +19,15 @@
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda",
-      "dependsOn": []
+      "dependsOn": [
+        {
+          "category": "auth",
+          "resourceName": "mfeaccounts9f6c38e0",
+          "attributes": [
+            "UserPoolId"
+          ]
+        }
+      ]
     }
   },
   "api": {
