--- a/part4/mfe-accounts/amplify/backend/backend-config.json
+++ b/part4/mfe-accounts/amplify/backend/backend-config.json
@@ -31,7 +31,7 @@
     }
   },
   "api": {
-    "accountsRest": {
+    "accountsRestApi": {
       "service": "API Gateway",
       "providerPlugin": "awscloudformation",
       "dependsOn": [
