- support rds - change to angular accounts - call api gateway

--- a/part4/mfe-accounts/amplify/backend/backend-config.json
+++ b/part4/mfe-accounts/amplify/backend/backend-config.json
@@ -18,7 +18,17 @@
     "accountsAPI": {
       "build": true,
       "providerPlugin": "awscloudformation",
-      "service": "Lambda"
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "rds",
+          "resourceName": "accountsCluster",
+          "attributes": [
+            "Arn",
+            "SecretArn"
+          ]
+        }
+      ]
     }
   },
   "api": {
@@ -38,7 +48,7 @@
     }
   },
   "rds": {
-    "accountsDatabase": {
+    "accountsCluster": {
       "service": "RDSCluster",
       "providerPlugin": "awscloudformation",
       "dependsOn": []
